CCMSPUI-376 Removed notification summary end point and related methods
