# soa-gateway-api/open-api-specification.yml
@@ -3,41 +3,6 @@ info:
   title: 'SOA Gateway API'
   version: '1.0.0'
 paths:
-  /users/{user-id}/notifications/summary:
-    get:
-      tags:
-        - notifications
-      summary: 'Get User Notification Summary'
-      operationId: 'getUserNotificationSummary'
-      parameters:
-        - name: 'user-id'
-          in: 'path'
-          required: true
-          schema:
-            type: 'string'
-            example: 'abc123'
-        - $ref: '#/components/parameters/soaGatewayUserLoginId'
-        - $ref: '#/components/parameters/soaGatewayUserRole'
-        - $ref: '#/components/parameters/maxRecords'
-
-      responses:
-        '200':
-          description: 'Successful operation'
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/notificationSummary"
-        '400':
-          description: 'Bad request'
-        '401':
-          description: 'Unauthorized'
-        '403':
-          description: 'Forbidden'
-        '404':
-          description: 'Not found'
-        '500':
-          description: 'Internal server error'
-
   /notifications:
     get:
       tags:
