# soa-gateway-service/src/main/java/uk/gov/laa/ccms/soa/gateway/controller/NotificationController.java
@@ -97,34 +97,4 @@ public class NotificationController implements NotificationsApi {
 
   }
 
-  /**
-   * Get a summary of the notifications for the supplied user.
-   *
-   * @param userId  (required) - the related user.
-   * @param soaGatewayUserLoginId  (required) - the user requesting the data.
-   * @param soaGatewayUserRole  (required) - the user role requesting the data.
-   * @param maxRecords  (optional, default to 100) - the maximum records to query.
-   * @return ResponseEntity wrapping a notification summary.
-   */
-  @Override
-  public ResponseEntity<NotificationSummary> getUserNotificationSummary(
-      final String userId,
-      final String soaGatewayUserLoginId,
-      final String soaGatewayUserRole,
-      final Integer maxRecords) {
-
-    try {
-      NotificationSummary notificationSummary = notificationService.getNotificationSummary(
-          userId,
-          soaGatewayUserLoginId,
-          soaGatewayUserRole,
-          maxRecords);
-      return ResponseEntity.ok(notificationSummary);
-    } catch (Exception e) {
-      log.error("Notification Controller caught exception", e);
-      return ResponseEntity.internalServerError().build();
-    }
-
-  }
-
 }
